[gd_scene load_steps=3 format=3 uid="uid://t6anfvcono1r"]

[ext_resource type="Script" uid="uid://vl2kqrxwbcha" path="res://addons/BehaviorTreeEditor/scripts/BehaviorTreeGraph.gd" id="1_8ilak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tva7f"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 0)

[node name="BehaviorTreeGraph" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
grid_pattern = 1
right_disconnects = true
script = ExtResource("1_8ilak")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 53.0
offset_right = 132.0
offset_bottom = 77.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tva7f")

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="duplicate_nodes_request" from="." to="." method="_on_duplicate_nodes_request"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
